[tool.poetry]
name = "backend-fastapi"
version = "0.1.0"
description = ""
authors = ["Jinwoo Kim <99790907+jinu0328@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
